--- a/documentation/howto_create-external-plugin.asciidoc
+++ b/documentation/howto_create-external-plugin.asciidoc
@@ -15,7 +15,7 @@ Creating a new plug-in means:
 
 For the Java plug-in it was relatively easy. As you are inside the Java world, you can use multiple utilities libraries in order to get the link:https://en.wikipedia.org/wiki/Abstract_syntax_tree[AST] or to merge Java code. With this new feature, we wanted that behaviour to be possible for any programming language.
 
-== How does it work
+== General intuition
 
 Below you will find a very high level description of how CobiGen worked in previous versions:
 
@@ -35,15 +35,21 @@ CobiGen acts as a client that sends requests to the server in order to read the 
 
 The creation of a new plug-in consists mainly in two steps:
 
+* Creation of the server (external process).
+
+* Creation of a CobiGen plug-in.
+
 === Server (external process)
 
-The server can be programmed in any language that is able to implement REST services endpoints. The API that it needs to implement is defined with link:https://github.com/jdiazgon/cobigen-template-plugin/blob/master/APIContract.yml[this contract]. You can paste the content to https://editor.swagger.io/ for a better look. 
+The server can be programmed in any language that is able to implement REST services endpoints. The API that needs to implement is defined with link:https://github.com/jdiazgon/cobigen-template-plugin/blob/master/APIContract.yml[this contract]. You can paste the content to https://editor.swagger.io/ for a better look. 
 
-We have already created a NestJS server that implements the API defined above. You can find the code link:https://github.com/jdiazgon/CobiGen-NestServer/blob/master/src/processmanagement/processmanagement.controller.ts[here] which you can use as an example.
+We have already created a NestJS server that implements the API defined above. You can find the code link:https://github.com/jdiazgon/cobigen-nest-server/blob/master/src/processmanagement/processmanagement.controller.ts[here] which you can use as an example.
 
 As you can see, the endpoints have the following naming convention: `processmanagement/todoplugin/nameOfService` where you will have to change `todo` to your plug-in name (e.g. rustplugin, pyplugin, goplugin...)
 
-In order to test the server, you will have to deploy it on your local machine (localhost) and port 5000. If that port is already on use, you can deploy it on higher port values (5001, 5002...). Nevertheless, we will explain better the testing process as you need to complete the next step before.
+In order to test the server, you will have to deploy it on your local machine (localhost) and port 5000. If that port is already in use, you can deploy it on higher port values (5001, 5002...). Nevertheless, we explain HERE the testing process as you need to complete the next step before.
+
+IMPORTANT: Your server must accept one argument when running it. The argument will be the port number (as an integer). This will be used for CobiGen in order to handle blocked ports when deploying your server. Check this link:https://github.com/jdiazgon/cobigen-nest-server/blob/master/src/main.ts#L47[code] to see how we implemented that argument on our NestJS server.
 
 === CobiGen plug-in
 
@@ -73,20 +79,88 @@ The generation can create a full Angular 6 client using the devon4ng-application
 
 image::images/howtos/todo-plugin/packageStructure.png[Package structure,width="300"link="images/howtos/todo-plugin/packageStructure.png"]
 
-* Now we just need to change some properties. In class `TodoPluginActivator` (in our case `NestPluginActivator`), change all the `todo` to your plug-in name. See below the 3 strings that need to be changed:
+* Now we just need to change some strings, this is needed for CobiGen to register all the different plugins (they need unique names). In class `TodoPluginActivator` (in our case `NestPluginActivator`), change all the `todo` to your plug-in name. See below the 3 strings that need to be changed:
 
 image::images/howtos/todo-plugin/pluginActivator.png[Plugin activator,width="450"link="images/howtos/todo-plugin/pluginActivator.png"]
 
-Take into account that the TypeScript merging for CobiGen needs Node 6 or higher to be installed at your machine.
 
-NOTE: This is a short introduction to the Angular generation. For a deeper tutorial including the generation of the backend, we strongly recommend you to follow link:files/HOW-TO-Devonfw-3.0.0-CobiGen-PoC-E2E_v3.11.pdf[this document].
+* Finally, we will change some properties from the `pom.xml` of the project. These properties define the server (external process) that is going to be used:
+
+.. Inside `pom.xml`, press _Ctrl + F_ to perform a find and replace operation. Replace all `todo` with your plugin name: 
+
+image::images/howtos/todo-plugin/setPomProperties.png[Pom properties,width="550"link="images/howtos/todo-plugin/setPomProperties.png"]
+
+.. We are going to explain the server properties: 
+
+... artifactId: This is the name of your plug-in, that will be used for a future release on Maven Central.
+
+... plugin.name: does not need to be changed as it uses the property from the `artifactId`. When connecting to the server, it will send a request to `localhost:5000/{plugin.name}plugin/isConnectionReady`, that is why it is important to use an unique name for the plug-in.
+
+... server.name: This defines how the server executable (_.exe_) file will be named. This _.exe_ file contains all the needed resources for deploying the server. You can use any name you want.
+
+... server.version: You will specify here the server version that needs to be used. The _.exe_ file will be named as `{server.name}-{server.version}.exe`.
+
+... server.url: This will define from where to download the server. We *really* recommend you using NPM which is a package manager we know it works fine. We explain <<release_server, here>> how to release the server on NPM. This will download the _.exe_ file for Windows.
+
+... server.url.linux: Same as before, but this should download the _.exe_ file for Linux systems. If you do not want to implement a Linux version of the plug-in, just use the same URL from MacOS or Windows.
+
+... server.url.macos: Same as before, but this should download the _.exe_ file for MacOS systems. If you do not want to implement a MacOS version of the plug-in, just use the same URL from Linux or Windows.
+
+== Testing phase
+
+Now that you have finished with the implementation of the server and the creation of a new CobiGen plug-in, we are going to explain how you can test that everything works fine:
+
+[[release_server]]
+=== Release the server
+
+We are going to use link:https://www.npmjs.com/[NPM] to store the executable of our server. Even though NPM is a package manager for JavaScript, it can be used for our purpose.
+
+* Get the CobiGen server template from link:https://github.com/jdiazgon/cobigen-template-server[here]. It is a template repository (new GitHub feature), so you can click on "Use this template" as shown below:
+
+image::images/howtos/todo-plugin/useServerTemplate.png[Server CobiGen template,width="550"link="images/howtos/todo-plugin/useServerTemplate.png"]
+
+* Name your repo as `cobigen-name-server` where `name` can be python, rust, go... In our case we will create a `nest` plug-in. It will create a repo with only one commit which contains all the needed files.
+
+* Clone your just created repo and go to folder `cobigen-todo-server`. It will just contain two files: _ExternalProcessContract.yml_ is the OpenAPI definition which you can modify with your own server definition (this step is optional), and _package.json_ is a file needed for NPM in order to define where to publish this package:
+
+```JSON
+{
+  "name": "@devonfw/cobigen-todo-server",
+  "version": "1.0.0",
+  "description": "Todo server to implement the input reader and merger for CobiGen",
+  "author": "CobiGen Team",
+  "license": "Apache"
+}
+```
+
+Those are the default properties. This would push a new package `cobigen-todo-server` on the `devonfw` organization, with version 1.0.0. We have no restrictions here, you can use any organization, though we always recommend devonfw.
+
+NOTE: Remember to change all the `todo` to your server name. 
+
+* Add your executable file into the `cobigen-todo-server` folder, just like below. As we said previously, this _.exe_ is the server ready to be deployed.
+
+----
+cobigen-template-server/
+ |- cobigen-todo-server/
+   |- ExternalProcessContract.yml
+   |- package.json
+   |- todoserver-1.0.1.exe
+----
+
+* Finally, we have to publish to NPM. If you have never done it, you can follow this link:https://www.freecodecamp.org/news/how-to-make-a-beautiful-tiny-npm-package-and-publish-it-2881d4307f78/[tutorial]. Basically you need to login into NPM and run:
+
+[source, cmd]
+npm publish --access=public
+
+That's it! You have published the first version of your server. Now you just need to modify the properties defined on the pom of your CobiGen plug-in. Please see next section for more information.
+
+=== Finishing CobiGen plug-in
 
 == Requisites
 
 Install yarn globally:
 
-[source, cmd]
-npm install -g yarn
+
 
 == Angular 6 workspace
 
